--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
     "react-test-renderer": "^17.0.2",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
