--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recharts": "^2.1.5",
     "swr": "^1.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/react": "17.0.31",
+    "@types/recharts": "^1.8.23",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "babel-jest": "^27.3.1",
