--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
+    "node-mocks-http": "^1.11.0",
     "prettier": "2.4.1",
     "react-test-renderer": "^17.0.2",
     "typescript": "4.4.4",
